--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ nav ul {
 }
 
 .theme-primary {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
 
 .theme-primary .btn {
@@ -165,4 +165,5 @@ nav ul {
 .contact-box {
     flex: 1;
     padding: 20px 40px;
+	
 }
